@@ -1,3 +1,12 @@
+Sat Dec  4 00:17:31 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
+
+	* tao/IIOP_Endpoint.cpp:
+	* tao/Strategies/SCIOP_Endpoint.cpp
+	
+	  Fixed a logic error while trying to parse the string passed in
+	  for PreferredInterfaces option. Thanks to Theckla Louchios
+	  <theckla.louchois@lmco.com> for reporting the problem.
+
 Fri Dec  3 11:34:37 2004  Dale Wilson  <wilson_d@ociweb.com>
 
         * orbsvcs/orbsvcs/Notify/Admin.h:
